manifests/apps/www/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: www
  namespace: www
spec:
  ingressClassName: nginx
  rules:
    - host: www.seancloud.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: www
                port:
                  number: 80
